@@ -1,1 +1,1 @@
-indicator-china-weather_3.1.0-32_source.buildinfo utils optional
+indicator-china-weather_3.1.0-38_source.buildinfo utils optional
