@@ -1,3 +1,9 @@
+indicator-china-weather (3.1.0-38) v101; urgency=medium
+
+  * 按钮反白
+
+ -- baijincheng <baijincheng@kylinos.cn>  Sat,16  Jan 2021 21:33:00 +0800
+
 indicator-china-weather (3.1.0-37) v101; urgency=medium
 
   * 解决了BUG#30685 程序没有IP定位功能
